Templating with Twig: Controller rendering. Render template without controller

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,9 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+page_contacts:
+    path: /contacts
+    defaults:
+        _controller: FrameworkBundle:Template:template
+        template:    static/contacts.html.twig
