--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,24 +1,36 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
 
-    # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    user:
+                        password: userpass
+                        roles: 'ROLE_USER'
+                    admin:
+                        password: adminpass
+                        roles: 'ROLE_ADMIN'
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
-        main:
+        secured_area:
             anonymous: ~
-            # activate different ways to authenticate
+            pattern: ^/
+            form_login:
+                login_path: login
+                check_path: login
+                default_target_path: secured
+                always_use_default_target_path: true
+            logout:
+                path: /logout
+                target: /
 
-            # http_basic: ~
-            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/secured, roles: ROLE_ADMIN }
