--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,8 +33,13 @@ security:
             guard:
                 authenticators:
                     - app.token_authenticator
+            switch_user: { role: ROLE_SUPER_ADMIN, parameter:_take_user }
 
 
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/secured, roles: ROLE_ADMIN }
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
