Fixing scrutinizer build

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -17,6 +17,6 @@ build:
           - bin/phpunit -v
     project_setup:
         before:
-          - mysql -e "CREATE DATABASE symfony
+          - mysql -e "CREATE DATABASE symfony"
         # after:
           # - bin/console doctrine:fixtures:load --no-interaction
